[package]
name = "axdevice_base"
edition = "2024"
description = "Basic traits and structures for emulated devices in ArceOS hypervisor."
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
cfg-if = "1.0"
serde = { version = "1.0.204", default-features = false, features = ["derive", "alloc"] }
# System independent crates provided by ArceOS.
axerrno = "0.1.0"
axaddrspace = "0.1.0"
axvmconfig = { version = "0.1.0", default-features = false }
memory_addr = "0.4"
